# libversion-rs

./: CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: comparison.rs
src/: compare.rs  component.rs  iter.rs  lib.rs  parse.rs  string.rs
testdata/: version-comparison-tests.txt
tests/: interface.rs  suite.rs
tests/suite_parser/: mod.rs
