[package]
name = "libversion"
description = "Advanced version string comparison algorithm"
version = "0.2.0"
authors = ["Dmitry Marakasov <amdmi3@amdmi3.ru>"]
repository = "https://github.com/repology/libversion-rs"
readme = "README.md"
categories = ["algorithms", "version", "comparison"]
license = "MIT"
edition = "2024"

[[bench]]
name = "comparison"
harness = false

[dependencies]
bitflags = "2.11.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
regex = { version = "1.12.3", default-features = false, features = ["std"] }
