[package]
name = "libversion"
description = "Advanced version string comparison algorithm"
version = "0.3.2"
authors = ["Dmitry Marakasov <amdmi3@amdmi3.ru>"]
repository = "https://github.com/repology/libversion-rs"
readme = "README.md"
categories = ["algorithms"]
keywords = ["version", "comparison"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

[[bench]]
name = "comparison"
harness = false

[dependencies]
bitflags = "2.13.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
regex = { version = "1.13.1", default-features = false, features = ["std"] }

[lints.clippy]
uninlined_format_args = "warn"
